# HWiNFO_Analysis

./: CMakeLists.txt  CSV_Helper.cpp  CSV_Helper.h  Readme.md  main.cpp
GUI/: gui.cpp  gui.h
